Uses new API and Vue to render trigger variables block
Refactores trigger variables to use the new API and the
new vue components.
Deletes the HAML and jQuery code that used to be
responsible to render them

--- a/changelogs/unreleased/50904-move-job-page-vue.yml
+++ b/changelogs/unreleased/50904-move-job-page-vue.yml
@@ -1,5 +1,5 @@
 ---
-title: Use Vue component to render Artifacts block on Job page
-merge_request:
+title: Use Vue components and new API to render Artifacts, Trigger Variables and Commit blocks on Job page
+merge_request: 21777
 author:
 type: other
